[gd_scene load_steps=20 format=2]

[ext_resource path="res://StableHordeClient.gd" type="Script" id=1]
[ext_resource path="res://addons/stable_horde_client/stable_horde_client.gd" type="Script" id=2]
[ext_resource path="res://theme/kenneyUI-blue.tres" type="Theme" id=3]
[ext_resource path="res://Infodump.gd" type="Script" id=4]
[ext_resource path="res://ConfigSlider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Credits.gd" type="Script" id=6]
[ext_resource path="res://theme/components/blue_button05.png" type="Texture" id=7]
[ext_resource path="res://theme/components/grey_button05.png" type="Texture" id=8]
[ext_resource path="res://addons/stable_horde_client/stable_horde_models.gd" type="Script" id=9]
[ext_resource path="res://Model.gd" type="Script" id=10]
[ext_resource path="res://Options.gd" type="Script" id=11]
[ext_resource path="res://ImagePreview.gd" type="Script" id=12]
[ext_resource path="res://assets/icons/info_w.png" type="Texture" id=13]
[ext_resource path="res://assets/icons/lever_w.png" type="Texture" id=14]
[ext_resource path="res://theme/gantari/Gantari[wght].ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/icons/circle.png" type="Texture" id=16]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 195, 49 )
margin_left = 7.44127
margin_right = 9.57659
margin_top = 9.05894
margin_bottom = 8.60599
modulate_color = Color( 0.368627, 0, 0.137255, 1 )

[sub_resource type="DynamicFont" id=3]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="GDScript" id=1]
script/source = "extends Label

func _ready():
	text = \"Version: \" + ToolConsts.VERSION
"

[node name="TabContainer" type="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="StableHordeClient" type="HTTPRequest" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="Generate" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Generate"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1577.0
margin_bottom = 846.0
custom_constants/separation = 3

[node name="Generate" type="HBoxContainer" parent="Generate/VBoxContainer"]
margin_right = 1562.0
margin_bottom = 41.0

[node name="PromptCC" type="MarginContainer" parent="Generate/VBoxContainer/Generate"]
unique_name_in_owner = true
margin_right = 1438.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="PromptLine" type="LineEdit" parent="Generate/VBoxContainer/Generate/PromptCC"]
unique_name_in_owner = true
margin_right = 1438.0
margin_bottom = 41.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "A horde of cute blue robots with gears on their head."

[node name="PromptCover" type="ColorRect" parent="Generate/VBoxContainer/Generate/PromptCC"]
unique_name_in_owner = true
visible = false
margin_right = 1438.0
margin_bottom = 41.0

[node name="GenerationsProcessing" type="TextureProgress" parent="Generate/VBoxContainer/Generate/PromptCC"]
unique_name_in_owner = true
margin_right = 1438.0
margin_bottom = 41.0
mouse_filter = 2
max_value = 20.0
step = 0.01
texture_progress = ExtResource( 8 )
tint_progress = Color( 0.572549, 0.941176, 1, 1 )
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 6
stretch_margin_right = 6
stretch_margin_bottom = 6

[node name="GenerationsDone" type="TextureProgress" parent="Generate/VBoxContainer/Generate/PromptCC"]
unique_name_in_owner = true
margin_right = 1438.0
margin_bottom = 41.0
mouse_filter = 2
max_value = 20.0
step = 0.01
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 6
stretch_margin_right = 6
stretch_margin_bottom = 6

[node name="ProgressText" type="Label" parent="Generate/VBoxContainer/Generate/PromptCC"]
unique_name_in_owner = true
visible = false
margin_top = 12.0
margin_right = 1438.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "0 Done. 1 Processing. 3 Waiting. ETA 100 Sec"
align = 1

[node name="Tween" type="Tween" parent="Generate/VBoxContainer/Generate/PromptCC"]
unique_name_in_owner = true

[node name="GenerateButton" type="Button" parent="Generate/VBoxContainer/Generate"]
unique_name_in_owner = true
margin_left = 1442.0
margin_right = 1562.0
margin_bottom = 41.251
rect_min_size = Vector2( 120, 0 )
text = "Generate"

[node name="CancelButton" type="Button" parent="Generate/VBoxContainer/Generate"]
unique_name_in_owner = true
visible = false
margin_left = 1458.0
margin_right = 1578.0
margin_bottom = 41.251
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_styles/disabled = SubResource( 2 )
text = "Cancel"

[node name="NegPromptHBC" type="HBoxContainer" parent="Generate/VBoxContainer"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 1562.0
margin_bottom = 82.0

[node name="NegPromptLabel" type="Label" parent="Generate/VBoxContainer/NegPromptHBC"]
margin_top = 10.0
margin_right = 130.0
margin_bottom = 27.0
text = "Negative Prompt:"

[node name="NegativePromptLine" type="LineEdit" parent="Generate/VBoxContainer/NegPromptHBC"]
unique_name_in_owner = true
margin_left = 134.0
margin_right = 1562.0
margin_bottom = 38.4343
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Any text here will be avoided. Increase CFG if it doesn't seem to work."

[node name="StatusPanel" type="PanelContainer" parent="Generate/VBoxContainer"]
margin_top = 85.0
margin_right = 1562.0
margin_bottom = 119.0

[node name="StatusText" type="RichTextLabel" parent="Generate/VBoxContainer/StatusPanel"]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 7.0
margin_right = 1555.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 20 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="MainArea" type="HBoxContainer" parent="Generate/VBoxContainer"]
margin_top = 122.0
margin_right = 1562.0
margin_bottom = 831.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Controls" type="TabContainer" parent="Generate/VBoxContainer/MainArea"]
unique_name_in_owner = true
margin_right = 308.0
margin_bottom = 709.0

[node name="Basic" type="VBoxContainer" parent="Generate/VBoxContainer/MainArea/Controls"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Amount" parent="Generate/VBoxContainer/MainArea/Controls/Basic" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_right = 300.0
margin_bottom = 63.0

[node name="Model" type="VBoxContainer" parent="Generate/VBoxContainer/MainArea/Controls/Basic"]
unique_name_in_owner = true
margin_top = 83.0
margin_right = 300.0
margin_bottom = 169.0
script = ExtResource( 10 )

[node name="ModelButtons" type="HBoxContainer" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model"]
margin_right = 300.0
margin_bottom = 41.0

[node name="ModelSelectLabel" type="Label" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons"]
margin_top = 12.0
margin_right = 45.0
margin_bottom = 29.0
text = "Model"

[node name="ModelInfo" type="Button" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons"]
unique_name_in_owner = true
margin_left = 49.0
margin_right = 99.0
margin_bottom = 41.251
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 13 )
flat = true
expand_icon = true

[node name="ModelTrigger" type="Button" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons"]
unique_name_in_owner = true
margin_left = 103.0
margin_right = 153.0
margin_bottom = 41.251
rect_min_size = Vector2( 50, 0 )
icon = ExtResource( 14 )
flat = true
expand_icon = true

[node name="ModelInfoCard" type="PopupPanel" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons"]
unique_name_in_owner = true
margin_left = 157.0
margin_right = 665.0
margin_bottom = 41.0

[node name="ModelInfoLabel" type="RichTextLabel" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons/ModelInfoCard"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 4.0
margin_right = 504.0
margin_bottom = 94.0
rect_min_size = Vector2( 500, 0 )
bbcode_enabled = true
bbcode_text = "This is some model info

blah blah blah

url: https://example.com"
text = "This is some model info

blah blah blah

url: https://example.com"
fit_content_height = true

[node name="CC" type="CenterContainer" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons"]
margin_left = 157.0
margin_right = 197.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 40 )

[node name="ModelHealth" type="TextureRect" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons/CC"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="ModelETA" type="Label" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelButtons/CC"]
unique_name_in_owner = true
margin_left = 12.0
margin_top = 6.0
margin_right = 27.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ModelSelect" type="OptionButton" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model"]
unique_name_in_owner = true
margin_top = 45.0
margin_right = 300.0
margin_bottom = 86.251
text = "Any model"
clip_text = true
items = [ "Any model", null, false, 0, null, "stable_diffusion", null, false, 1, null ]
selected = 0

[node name="StableHordeModels" type="HTTPRequest" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/ModelSelect"]
unique_name_in_owner = true
script = ExtResource( 9 )

[node name="PopupInfo" type="PopupPanel" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model"]
unique_name_in_owner = true
margin_left = 157.0
margin_right = 665.0
margin_bottom = 98.0

[node name="PopupInfoLabel" type="RichTextLabel" parent="Generate/VBoxContainer/MainArea/Controls/Basic/Model/PopupInfo"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 4.0
margin_right = 504.0
margin_bottom = 94.0
rect_min_size = Vector2( 500, 0 )
bbcode_enabled = true
bbcode_text = "This is some model info

blah blah blah

url: https://example.com"
text = "This is some model info

blah blah blah

url: https://example.com"
fit_content_height = true

[node name="NegativePrompt" type="CheckButton" parent="Generate/VBoxContainer/MainArea/Controls/Basic"]
unique_name_in_owner = true
margin_top = 189.0
margin_right = 300.0
margin_bottom = 249.251
size_flags_horizontal = 3
text = "Negative Prompt"

[node name="TrustedWorkers" type="CheckButton" parent="Generate/VBoxContainer/MainArea/Controls/Basic"]
unique_name_in_owner = true
margin_top = 269.0
margin_right = 300.0
margin_bottom = 329.251
text = "Require Trusted Workers"

[node name="HBC" type="HBoxContainer" parent="Generate/VBoxContainer/MainArea/Controls/Basic"]
margin_top = 349.0
margin_right = 300.0
margin_bottom = 409.0

[node name="NSFW" type="CheckButton" parent="Generate/VBoxContainer/MainArea/Controls/Basic/HBC"]
unique_name_in_owner = true
margin_right = 148.0
margin_bottom = 60.251
size_flags_horizontal = 3
text = "NSFW"

[node name="CensorNSFW" type="CheckButton" parent="Generate/VBoxContainer/MainArea/Controls/Basic/HBC"]
unique_name_in_owner = true
margin_left = 152.0
margin_right = 300.0
margin_bottom = 60.251
size_flags_horizontal = 3
pressed = true
text = "Censored"

[node name="SaveAll" type="Button" parent="Generate/VBoxContainer/MainArea/Controls/Basic"]
unique_name_in_owner = true
margin_top = 429.0
margin_right = 300.0
margin_bottom = 470.251
size_flags_horizontal = 3
disabled = true
text = "Save All"

[node name="Advanced" type="VBoxContainer" parent="Generate/VBoxContainer/MainArea/Controls"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 20

[node name="Width" parent="Generate/VBoxContainer/MainArea/Controls/Advanced" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_right = 300.0
margin_bottom = 63.0
config_setting = "width"

[node name="Height" parent="Generate/VBoxContainer/MainArea/Controls/Advanced" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_top = 83.0
margin_right = 300.0
margin_bottom = 146.0
config_setting = "height"

[node name="StepsSlider" parent="Generate/VBoxContainer/MainArea/Controls/Advanced" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_top = 166.0
margin_right = 300.0
margin_bottom = 229.0
config_setting = "steps"

[node name="ConfigSlider" parent="Generate/VBoxContainer/MainArea/Controls/Advanced" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_top = 249.0
margin_right = 300.0
margin_bottom = 352.0
config_setting = "cfg_scale"

[node name="SamplerMethodLabel" type="Label" parent="Generate/VBoxContainer/MainArea/Controls/Advanced"]
margin_top = 372.0
margin_right = 300.0
margin_bottom = 409.0
text = "Sampling method (k_lms is default k-diffusion sampler)"
autowrap = true

[node name="SamplerMethod" type="OptionButton" parent="Generate/VBoxContainer/MainArea/Controls/Advanced"]
unique_name_in_owner = true
margin_top = 429.0
margin_right = 300.0
margin_bottom = 470.251
text = "k_lms"
items = [ "k_lms", null, false, 0, null, "k_heun", null, false, 1, null, "k_euler", null, false, 2, null, "k_euler_a", null, false, 3, null, "k_dpm_2", null, false, 4, null, "k_dpm_2_a", null, false, 5, null, "DDIM", null, false, 6, null, "PLMS", null, false, 7, null ]
selected = 0

[node name="SeedLabel" type="Label" parent="Generate/VBoxContainer/MainArea/Controls/Advanced"]
margin_top = 490.0
margin_right = 300.0
margin_bottom = 507.0
text = "Seed (blank to randomize)"
autowrap = true

[node name="Seed" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Controls/Advanced"]
unique_name_in_owner = true
margin_top = 527.0
margin_right = 300.0
margin_bottom = 565.434

[node name="Karras" type="CheckButton" parent="Generate/VBoxContainer/MainArea/Controls/Advanced"]
unique_name_in_owner = true
margin_top = 585.0
margin_right = 300.0
margin_bottom = 645.251
pressed = true
text = "Karras"

[node name="img2img" type="VBoxContainer" parent="Generate/VBoxContainer/MainArea/Controls"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 20

[node name="Img2ImgEnabled" type="CheckButton" parent="Generate/VBoxContainer/MainArea/Controls/img2img"]
unique_name_in_owner = true
margin_right = 342.0
margin_bottom = 60.251
text = "Enabled"

[node name="DenoisingStrength" parent="Generate/VBoxContainer/MainArea/Controls/img2img" instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false
margin_top = 80.0
margin_right = 342.0
margin_bottom = 163.0
config_setting = "denoising_strength"

[node name="OpenImage" type="FileDialog" parent="Generate/VBoxContainer/MainArea/Controls/img2img"]
unique_name_in_owner = true
margin_top = 183.0
margin_right = 342.0
margin_bottom = 372.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png, *.jpg, *.jpeg, *.webp ; Supported Images\"" )

[node name="SelectImage" type="Button" parent="Generate/VBoxContainer/MainArea/Controls/img2img"]
unique_name_in_owner = true
visible = false
margin_right = 115.324
margin_bottom = 41.251
text = "Select Image"

[node name="ImagePreview" type="TextureRect" parent="Generate/VBoxContainer/MainArea/Controls/img2img"]
unique_name_in_owner = true
visible = false
margin_top = 392.0
margin_right = 342.0
margin_bottom = 642.0
rect_min_size = Vector2( 250, 250 )
expand = true
stretch_mode = 6
script = ExtResource( 12 )

[node name="Display" type="VBoxContainer" parent="Generate/VBoxContainer/MainArea"]
unique_name_in_owner = true
margin_left = 328.0
margin_right = 1562.0
margin_bottom = 709.0
size_flags_horizontal = 3

[node name="DisplayFocus" type="VBoxContainer" parent="Generate/VBoxContainer/MainArea/Display"]
unique_name_in_owner = true
visible = false
margin_right = 1234.0
margin_bottom = 166.0
size_flags_vertical = 3

[node name="FocusedImage" type="TextureRect" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus"]
unique_name_in_owner = true
margin_right = 1234.0
margin_bottom = 40.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="ImagePrompt" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 1234.0
margin_bottom = 82.4343
size_flags_horizontal = 3
text = "Prompt:"
editable = false

[node name="WorkerInfo" type="HBoxContainer" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus"]
unique_name_in_owner = true
margin_top = 128.0
margin_right = 1234.0
margin_bottom = 166.0
custom_constants/separation = 50

[node name="WorkerName" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/WorkerInfo"]
unique_name_in_owner = true
margin_right = 592.0
margin_bottom = 38.4343
size_flags_horizontal = 3
text = "Worker Name:"
editable = false

[node name="WorkerID" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/WorkerInfo"]
unique_name_in_owner = true
margin_left = 642.0
margin_right = 1234.0
margin_bottom = 38.4343
size_flags_horizontal = 3
text = "Worker ID:"
editable = false

[node name="ImageInfo" type="HBoxContainer" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus"]
unique_name_in_owner = true
margin_top = 86.0
margin_right = 1234.0
margin_bottom = 124.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Save" type="Button" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/ImageInfo"]
unique_name_in_owner = true
margin_left = -324.0
margin_top = 272.0
margin_right = -174.0
margin_bottom = 313.251
rect_min_size = Vector2( 150, 0 )
disabled = true
text = "Save Image"

[node name="Push" type="Control" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/ImageInfo"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="ImageSeed" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/ImageInfo"]
unique_name_in_owner = true
margin_right = 90.8655
margin_bottom = 38.4343
text = "Seed:"
editable = false
expand_to_text_length = true

[node name="ImageWidth" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/ImageInfo"]
unique_name_in_owner = true
margin_left = 140.0
margin_right = 230.866
margin_bottom = 38.4343
text = "Width: "
editable = false
expand_to_text_length = true

[node name="ImageLength" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/ImageInfo"]
unique_name_in_owner = true
margin_left = 280.0
margin_right = 370.866
margin_bottom = 38.4343
text = "Length:"
editable = false
expand_to_text_length = true

[node name="GenerationModel" type="LineEdit" parent="Generate/VBoxContainer/MainArea/Display/DisplayFocus/ImageInfo"]
unique_name_in_owner = true
margin_left = 420.0
margin_right = 510.866
margin_bottom = 38.4343
text = "Model:"
editable = false
expand_to_text_length = true

[node name="GridScroll" type="ScrollContainer" parent="Generate/VBoxContainer/MainArea/Display"]
unique_name_in_owner = true
margin_right = 1234.0
margin_bottom = 709.0
rect_min_size = Vector2( 900, 600 )
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="Generate/VBoxContainer/MainArea/Display/GridScroll"]
unique_name_in_owner = true
margin_right = 1234.0
margin_bottom = 709.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 9

[node name="Options" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
script = ExtResource( 11 )

[node name="VBC" type="VBoxContainer" parent="Options"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1577.0
margin_bottom = 846.0
custom_constants/separation = 10

[node name="HBC" type="HBoxContainer" parent="Options/VBC"]
margin_right = 1562.0
margin_bottom = 831.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBCLeft" type="VBoxContainer" parent="Options/VBC/HBC"]
margin_right = 518.0
margin_bottom = 831.0
size_flags_horizontal = 3

[node name="APIKeyLabel" type="RichTextLabel" parent="Options/VBC/HBC/VBCLeft"]
unique_name_in_owner = true
margin_right = 518.0
margin_bottom = 18.0
bbcode_enabled = true
bbcode_text = "API Key [url=register](Register)[/url]"
text = "API Key (Register)"
fit_content_height = true

[node name="APIKey" type="LineEdit" parent="Options/VBC/HBC/VBCLeft"]
unique_name_in_owner = true
margin_top = 22.0
margin_right = 518.0
margin_bottom = 60.4343
secret = true
clear_button_enabled = true

[node name="SaveDirLabel" type="Label" parent="Options/VBC/HBC/VBCLeft"]
unique_name_in_owner = true
margin_top = 64.0
margin_right = 518.0
margin_bottom = 81.0
text = "Save Directory"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBC/HBC/VBCLeft"]
margin_top = 85.0
margin_right = 518.0
margin_bottom = 126.0

[node name="SaveDir" type="LineEdit" parent="Options/VBC/HBC/VBCLeft/HBoxContainer"]
unique_name_in_owner = true
margin_right = 436.0
margin_bottom = 41.0
size_flags_horizontal = 3
editable = false
clear_button_enabled = true

[node name="SaveDirBrowseButton" type="Button" parent="Options/VBC/HBC/VBCLeft/HBoxContainer"]
unique_name_in_owner = true
margin_left = 440.0
margin_right = 518.324
margin_bottom = 41.251
text = "Browse"

[node name="SaveDirBrowse" type="FileDialog" parent="Options/VBC/HBC/VBCLeft"]
unique_name_in_owner = true
margin_top = 183.0
margin_right = 342.0
margin_bottom = 372.0
window_title = "Open a Directory"
mode = 2
access = 2

[node name="RememberPrompt" type="CheckButton" parent="Options/VBC/HBC/VBCLeft"]
unique_name_in_owner = true
margin_top = 130.0
margin_right = 518.0
margin_bottom = 190.251
text = "Remember Prompt"

[node name="LargerValues" type="CheckButton" parent="Options/VBC/HBC/VBCLeft"]
unique_name_in_owner = true
margin_top = 194.0
margin_right = 518.0
margin_bottom = 254.251
text = "Larger Values"

[node name="VBCMiddle" type="VBoxContainer" parent="Options/VBC/HBC"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 831.0
size_flags_horizontal = 3

[node name="VBCRight" type="VBoxContainer" parent="Options/VBC/HBC"]
margin_left = 1044.0
margin_right = 1562.0
margin_bottom = 831.0
size_flags_horizontal = 3

[node name="Information" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = 160.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Information"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1577.0
margin_bottom = 1010.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Information/VBoxContainer"]
margin_right = 1562.0
margin_bottom = 17.0

[node name="Title" type="Label" parent="Information/VBoxContainer/HBoxContainer"]
margin_right = 142.0
margin_bottom = 17.0
text = "Stable Horde Client"

[node name="Version" type="Label" parent="Information/VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_right = 207.0
margin_bottom = 17.0
text = "Version:"
script = SubResource( 1 )

[node name="HBC" type="HBoxContainer" parent="Information/VBoxContainer"]
margin_top = 27.0
margin_right = 1562.0
margin_bottom = 831.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBC1" type="VBoxContainer" parent="Information/VBoxContainer/HBC"]
margin_right = 800.0
margin_bottom = 804.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Infodump" type="RichTextLabel" parent="Information/VBoxContainer/HBC/VBC1"]
margin_right = 800.0
margin_bottom = 108.0
rect_min_size = Vector2( 800, 0 )
bbcode_enabled = true
bbcode_text = "Welcome to Stable Diffusion on Godot!

You can use this software to generate images using AI and then save them to your disk.

Be aware that this software is relying on the Stable Horde crowdsourced cluster, and therefore your speed will depend on how many other people are using this service at the same time"
text = "Welcome to Stable Diffusion on Godot!

You can use this software to generate images using AI and then save them to your disk.

Be aware that this software is relying on the Stable Horde crowdsourced cluster, and therefore your speed will depend on how many other people are using this service at the same time"
fit_content_height = true
scroll_active = false
script = ExtResource( 4 )

[node name="VBC2" type="VBoxContainer" parent="Information/VBoxContainer/HBC"]
margin_left = 804.0
margin_right = 1562.0
margin_bottom = 804.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Credits" type="RichTextLabel" parent="Information/VBoxContainer/HBC/VBC2"]
margin_right = 758.0
margin_bottom = 18.0
bbcode_enabled = true
bbcode_text = "Contributors"
text = "Contributors"
fit_content_height = true
script = ExtResource( 6 )

[connection signal="text_changed" from="Generate/VBoxContainer/Generate/PromptCC/PromptLine" to="." method="_on_PromptLine_text_changed"]
[connection signal="meta_clicked" from="Generate/VBoxContainer/StatusPanel/StatusText" to="." method="_on_StatusText_meta_clicked"]
[connection signal="toggled" from="Generate/VBoxContainer/MainArea/Controls/Basic/NegativePrompt" to="." method="_on_NegativePrompt_toggled"]
[connection signal="meta_clicked" from="Options/VBC/HBC/VBCLeft/APIKeyLabel" to="." method="_on_APIKeyLabel_meta_clicked"]
[connection signal="text_changed" from="Options/VBC/HBC/VBCLeft/APIKey" to="." method="_on_APIKey_text_changed"]
[connection signal="meta_clicked" from="Information/VBoxContainer/HBC/VBC1/Infodump" to="Information/VBoxContainer/HBC/VBC1/Infodump" method="_on_Infodump_meta_clicked"]
[connection signal="meta_clicked" from="Information/VBoxContainer/HBC/VBC2/Credits" to="Information/VBoxContainer/HBC/VBC2/Credits" method="_on_Credits_meta_clicked"]
